generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model users {
  id         Int          @id @default(autoincrement())
  name       String       @unique(map: "no_dupe_name") @db.VarChar(128)
  email      String       @unique(map: "no_dupe_email") @db.VarChar(128)
  password   String       @db.VarChar(10000)
  loadouts   loadouts[]
  statistics statistics[]
}

model loadouts {
  id       Int     @id @default(autoincrement())
  name     String  @db.VarChar(128)
  switches String? @db.VarChar(128)
  others   String? @db.VarChar(128)
  user_id  Int?
  users    users?  @relation(fields: [user_id], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@unique([name, user_id], map: "no_dupe_loadout")
}

model statistics {
  id           Int     @id @default(autoincrement())
  challenge_id Int
  type         String
  wpm          Int
  accuracy     Decimal @db.Decimal(5, 2)
  time_taken   Int
  datetime     String
  user_id      Int?
  users        users?  @relation(fields: [user_id], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_statistics")
}
