//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  name String [unique, not null]
  email String [unique, not null]
  password String [not null]
  loadouts loadouts [not null]
  statistics statistics [not null]
}

Table loadouts {
  id Int [pk, increment]
  name String [not null]
  switches String
  others String
  user_id Int
  users users

  indexes {
    (name, user_id) [unique]
  }
}

Table statistics {
  id Int [pk, increment]
  challenge_id Int [not null]
  type String [not null]
  wpm Int [not null]
  accuracy Decimal [not null]
  time_taken Int [not null]
  datetime String [not null]
  user_id Int
  users users
}

Ref: loadouts.user_id > users.id [delete: No Action]

Ref: statistics.user_id > users.id [delete: No Action]